Sat Jul  4 18:44:28 1998  Havoc Pennington  <hp@pobox.com>

	* COPYING: Fixed spelling error.
	* AUTHOR-INFO: Added note about keystroke notation.
	* debian-tutorial.sgml: Added contributors. Added copyright
	notice. Moved section on booting the system into an
	appendix. Included RMS's "trust" view of security. Wrote section
	on key command notation. Worked on the superuser section,
	incorporating ideas from RMS. Misc. little things, formatting,
	rewording, etc.

Sat Jul  4 16:46:36 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Worked on "What's on OS" and "What's free
	software sections; took out <ex> tags so the document would
	compile; misc. little things.

	* Makefile: Took out auto-generated CHANGELOG in favor of this
	manual ChangeLog.
	

Thu Jun 25 17:22:46 1998  Havoc Pennington  <hp@pobox.com>

	* AUTHOR-INFO: Added a comment that one should use the ChangeLog
