@@ -1,3 +1,7 @@
+Sat Jul  4 19:15:09 1998  Havoc Pennington  <hp@pobox.com>
+
+	* Makefile: Added targets for compressed text and postscript.
+
 Sat Jul  4 18:44:28 1998  Havoc Pennington  <hp@pobox.com>
 
 	* COPYING: Fixed spelling error.
